updated profile to display phone number in 3-3-4 and showcase userID

--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -1,4 +1,5 @@
 {% extends 'root.html' %}
+{% load custom_tags %}
 
 {% block title %}Account{% endblock title %}
 
@@ -94,8 +95,8 @@
                     <p class="text-lg">Address 1: {{ address1 }}</p>
                     <p class="text-lg">Address 2: {{ address2 }}</p>
                     <p class="text-lg">Zip Code: {{ zipcode }}</p>
-                    <p class="text-lg">Phone: {{ phone }}</p>
-                    <p class="text-lg">User ID: 223344</p>
+                    <p class="text-lg">Phone: {{ phone|phone_format }}</p>
+                    <p class="text-lg">User ID: {{user.id}}</p>
                 </div>
             </div>
 
