--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -94,7 +94,7 @@
                     <p class="text-lg">Address 1: {{ address1 }}</p>
                     <p class="text-lg">Address 2: {{ address2 }}</p>
                     <p class="text-lg">Zip Code: {{ zipcode }}</p>
-                    <p class="text-lg">Phone: {{ phone }}</p>
+                    <p class="text-lg">Phone: {{ phone|slice:":3" }}-{{ phone|slice:"3:6" }}-{{ phone|slice:"6:" }}</p>
                     <p class="text-lg">User ID: 223344</p>
                 </div>
             </div>
