--- a/kindred_causes/templates/root.html
+++ b/kindred_causes/templates/root.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/output.css'%}">
 </head>
 <body class="flex flex-col min-h-screen justify-between">
-    <div class="flex flex-col min-h-screen justify-between bg-base-200">
+    <div class="flex flex-col min-h-screen justify-between bg-base-200 pb-10">
         {% include 'navbar.html' %}
         <div class="flex grow">
         {% block content %}{% endblock content %}
