--- a/kindred_causes/main/templates/notification_details.html
+++ b/kindred_causes/main/templates/notification_details.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="flex justify-center w-full">
     <div class="w-full max-w-2xl">
-        <div class="flex flex-col m-5 overflow-x-auto border border-base-content/5 accent bg-base-100 rounded-2xl">
+        <div class="flex flex-col m-5 overflow-x-auto border border-base-content/5 accent bg-base-100 rounded-2xl pb-5">
             <div class="flex justify-center items-center px-2 w-full bg-neutral text-neutral-content">
                 <div class="size-6"></div>
                 <div class="text-2xl font-bold text-center py-2">Notification</div>
@@ -24,10 +24,12 @@
                     {{ object.body }}
                 </div>
             </div>
-            <a role="button" class="btn btn-primary" type="submit"
-                href="{% url 'inbox' %}">
-                Back
-              </a>
+            <div class="flex justify-around w-full">
+                <a role="button" class="btn btn-primary" type="submit"
+                    href="{% url 'inbox' %}">
+                    Back
+                </a>
+            </div>
         </div>
     </div>
 </div>
