Added stuff back

--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -79,8 +79,9 @@
                 <div class="collapse-content">
                     <p class="text-lg">Name: {{ user.get_full_name }}</p>
                     <p class="text-lg">Joined: January 1, 2020</p>
-                    {% comment %} <p class="text-lg">Start of Availability: {{ start_availability }}</p>
-                    <p class="text-lg">End of Availability: {{ end_availability }}</p> {% endcomment %}
+                    <p class="text-lg">Start of Availability: {{ start_availability }}</p>
+                    <p class="text-lg">End of Availability: {{ end_availability }}</p>
+                    <p class="text-lg">Preferences: {{ preferences }}</p>
                     <p class="text-lg">City: {{ city }}</p>
                     <p class="text-lg">State: {{ state }}</p>
                     <p class="text-lg">Skills: {{ skills }}</p>
